infra/k8s/connect-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connect-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: connect-mongo
  template:
    metadata:
      labels:
        app: connect-mongo
    spec:
      containers:
        - name: connect-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: connect-mongo-srv
spec:
  selector:
    app: connect-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
