infra/k8s/notifications-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: notifications
  template:
    metadata:
      labels:
        app: notifications
    spec:
      containers:
        - name: notifications
          image: us.gcr.io/orion-messaging-388417/notifications
---
apiVersion: v1
kind: Service
metadata: 
  name: notifications-srv
spec:
  selector:
    app: notifications
  ports:
  - name: notifications
    protocol: TCP
    port: 3000
    targetPort: 3000
