infra/k8s/notifications-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: notifications-mongo
  template:
    metadata:
      labels:
        app: notifications-mongo
    spec:
      containers:
        - name: notifications-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: notifications-mongo-srv
spec:
  selector:
    app: notifications-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
