infra/k8s/user-store-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-store-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: user-store-redis
  template:
    metadata:
      labels:
        app: user-store-redis
    spec:
      containers:
        - name: user-store-redis
          image: redis
          resources:
            limits:
              memory: "512Mi"
            requests:
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: user-store-redis-srv
spec:
  selector:
    app: user-store-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
