infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.org/websocket-services: "connect-srv"
spec:
  rules:
    - #host:
      http:
        paths:
          #- path: /api/auth/?(.*)
            #pathType: Prefix
            #backend:
              #service:
                #name: auth-srv
                #port:
                  #number: 3000
          - path: /socket/connect-socket/?(.*)
            pathType: Prefix
            backend:
              service:
                name: connect-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
